--- a/views/auth/resetPasswordRequest.ejs
+++ b/views/auth/resetPasswordRequest.ejs
@@ -38,51 +38,72 @@
             <div class="content-wrapper d-flex align-items-center auth px-0">
                 <div class="row w-100 mx-0">
                     <div class="col-lg-8 mx-auto">
-                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                            <a class="btn btn-outline-primary btn-icon-text float-start" id="close-registration"
-                                href="/">
-                                <i class="fa-solid fa-arrow-left m-1 mb-0 mt-0"></i> Login
-                            </a>
-                            <div class="brand-logo text-center">
-                                <img src="/images/charlieBoy/CB-5.jpg" alt="logo" style="width: 25% !important;">
-                            </div>
+                        <div class="text-left py-4 px-4 px-sm-5">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="card-title d-flex flex-nowrap">
+                                                <div class="w-100">
+                                                    <a class="btn btn-outline-primary btn-icon-text float-start"
+                                                        id="close-registration" href="/">
+                                                        <i class="fa-solid fa-arrow-left m-1 mb-0 mt-0"></i> Login
+                                                    </a>
+                                                </div>
+                                                <div class="brand-logo text-center mb-1 w-100">
+                                                    <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
+                                                        style="width: 80% !important;">
+                                                </div>
+                                                <div class="w-100"></div>
+                                            </div>
+                                            <h4 class="card-title">
+                                                Request New Password
+                                            </h4>
+                                            <div class="text-center">
+                                                <% if (messages.error) { %>
+                                                <p class="error">
+                                                    <%= messages.error %>
+                                                </p>
+                                                <% } %>
 
-                            <h4>
-                                Request New Password
-                            </h4>
-                            <% if (messages.error) { %>
-                            <p class="error">
-                                <%= messages.error %>
-                            </p>
-                            <% } %>
+                                                <% if (messages.info) { %>
+                                                <p class="info">
+                                                    <%= messages.info %>
+                                                </p>
+                                                <% } %>
+                                                <% if (messages.warning) { %>
+                                                <p class="warning">
+                                                    <%= messages.warning %>
+                                                </p>
+                                                <% } %>
+                                            </div>
+                                            <form id="form-forgot-password" class="pt-3" action="/resetPasswordRequest"
+                                                method="post">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label class="required"
+                                                                for="email"><%= lingua.user.email%></label>
+                                                            <input type="email" id="email" name="email"
+                                                                class="form-control form-control-lg"
+                                                                placeholder="example@gmail.com" required />
 
-                            <% if (messages.info) { %>
-                            <p class="info">
-                                <%= messages.info %>
-                            </p>
-                            <% } %>
-                            <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
-                            <form id="form-forgot-password" class="pt-3" action="/resetPasswordRequest" method="post">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <label class="required" for="email"><%= lingua.user.email%></label>
-                                            <input type="email" id="email" name="email"
-                                                class="form-control form-control-lg" placeholder="example@gmail.com"
-                                                required />
-
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="mt-3">
+                                                        <button
+                                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
+                                                            type="submit">
+                                                            Request<%# lingua.request%></button>
+                                                    </div>
+                                                </div>
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="mt-3">
-                                        <button
-                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                            type="submit">
-                                            Request<%# lingua.request%></button>
-                                    </div>
-                                </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
