--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -85,7 +85,7 @@
                                                 </p>
                                                 <% } %>
                                             </div>
-                                            <form id="form-register" class="pt-3" action="/register" method="post"
+                                            <form id="form-register" class="pt-3" action="/register" method="post" autocomplete="off"
                                                 onsubmit="disableSubmitBtn()">
                                                 <div class="row">
                                                     <div class="col-lg-6">
