--- a/views/auth/registerAndSubscribe.ejs
+++ b/views/auth/registerAndSubscribe.ejs
@@ -44,11 +44,7 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="card-title d-flex flex-nowrap">
-                                                <div class="w-100">
-                                                    <%= lingua.membership.createSubscriptions%>
-                                                </div>
-
-
+                                                <div class="w-100"></div>
                                                 <div class="brand-logo text-center mb-1 w-100">
                                                     <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
                                                         style="width: 50% !important;">
@@ -72,6 +68,9 @@
                                                     <% } %>
                                                 </div>
                                             </div>
+                                            <h4 class="card-title">
+                                                <%= lingua.subscribe%>
+                                            </h4>
                                             <div id="loading-div" class="text-small text-wrap">
                                             </div>
                                             <!-- Add Car Division with form fields -->
