--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -28,7 +28,7 @@
         <div class="container-fluid page-body-wrapper full-page-wrapper">
             <div class="content-wrapper d-flex align-items-center auth px-0">
                 <div class="row w-100 mx-0">
-                    <div class="col-lg-6 col-sm-12 col-sm-8 mx-auto">
+                    <div class="col-lg-5 col-m-6 col-sm-12 mx-auto">
                         <div class="text-center py-4 px-4 px-sm-5">
                             <div class="row">
                                 <div class="col-sm-12">
