--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -21,12 +21,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../../vendors/select2/select2.min.css">
     <link rel="stylesheet" href="../../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
-    <link rel="stylesheet" href="../../css/register.css">
-
+    <!-- <link rel="stylesheet" href="../../css/register.css"> -->
     <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="../../js/select.dataTables.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
@@ -37,50 +33,70 @@
 <body>
     <div class="container-scroller">
         <div class="container-fluid page-body-wrapper full-page-wrapper">
-            <div class="content-wrapper d-flex align-items-center auth px-0">
+            <div class="content-wrapper d-flex align-items-center px-0">
                 <div class="row w-100 mx-0">
                     <div class="col-lg-8 mx-auto">
-                        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                            <a class="btn btn-outline-primary btn-icon-text float-start" id="close-registration"
-                                href="/">
-                                <i class="fa-solid fa-arrow-left m-1 mb-0 mt-0"></i> Login
-                            </a>
-                            <div class="brand-logo text-center">
-                                <img src="/images/charlieBoy/CB-5.jpg" alt="logo" style="width: 25% !important;">
+                        <div class="text-left py-5 px-4 px-sm-5">
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <div class="card-title d-flex flex-nowrap">
+                                                <div class="w-100">
+                                                    <a class="btn btn-outline-primary btn-icon-text float-start"
+                                                        id="close-registration" href="/">
+                                                        <i class="fa-solid fa-arrow-left m-1 mb-0 mt-0"></i> Login
+                                                    </a>
+                                                </div>
+                                                <div class="brand-logo text-center mb-1 w-100">
+                                                    <img src="/images/charlieBoy/CB-5.jpg" alt="logo"
+                                                        style="width: 80% !important;">
+                                                </div>
+                                                <div class="w-100"></div>
+                                            </div>
+                                            <h4 class="card-title">
+                                                Create New Password
+                                            </h4>
+                                            <div class="text-center">
+                                                <% if (messages.error) { %>
+                                                <p class="error">
+                                                    <%= messages.error %>
+                                                </p>
+                                                <% } %>
+
+                                                <% if (messages.info) { %>
+                                                <p class="info">
+                                                    <%= messages.info %>
+                                                </p>
+                                                <% } %>
+                                                <% if (messages.warning) { %>
+                                                <p class="warning">
+                                                    <%= messages.warning %>
+                                                </p>
+                                                <% } %>
+                                            </div>
+                                            <form id="form-forgot-password" class="pt-3" action="/resetPassword"
+                                                method="post">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <input type="hidden" value="<%= id%>" name="userId" />
+                                                        <input type="hidden" value="<%= token%>" name="token" />
+                                                        <%- include('../user/passwordField.ejs'); %>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="mt-3">
+                                                        <button
+                                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
+                                                            type="submit">
+                                                            Change<%# lingua.request%></button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-
-                            <h4>
-                                Create New Password
-                            </h4>
-                            <% if (messages.error) { %>
-                            <p class="error">
-                                <%= messages.error%>
-                            </p>
-                            <% } %>
-
-                            <% if (messages.info) { %>
-                            <p class="info">
-                                <%= messages.info%>
-                            </p>
-                            <% } %>
-                            <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
-                            <form id="form-forgot-password" class="pt-3" action="/resetPassword" method="post">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <input type="hidden" value="<%= id%>" name="userId" />
-                                        <input type="hidden" value="<%= token%>" name="token" />
-                                        <%- include('../user/passwordField.ejs'); %>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="mt-3">
-                                        <button
-                                            class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                            type="submit">
-                                            Change<%# lingua.request%></button>
-                                    </div>
-                                </div>
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -104,8 +120,6 @@
     <script src="../../js/template.js"></script>
     <!-- <script src="../../js/register.js"></script> -->
     <!-- endinject -->
-    <!-- Custom js for this page-->
-    <script src="../../js/dashboard.js"></script>
     <script src="./js/jquery.cookie.js" type="text/javascript"></script>
 </body>
 
