Create registerAndActivateLinl function. Add condition in LocalStrategy to handle when the account is not activated. Create Checkout function with email. Externalize the webhook logic to a function. Change completeCheckoutSuccess function.

--- a/views/auth/activateAccountRequest.ejs
+++ b/views/auth/activateAccountRequest.ejs
@@ -62,7 +62,7 @@
                             </p>
                             <% } %>
                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
-                            <form id="form-forgot-password" class="pt-3" action="/activateAccountRequest" method="post">
+                            <form id="form-activate-account" class="pt-3" action="/activateAccountRequest" method="post">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
