Remove loading after plate validation.

--- a/views/auth/registerAndSubscribe.ejs
+++ b/views/auth/registerAndSubscribe.ejs
@@ -496,6 +496,7 @@
                             document.getElementById("carPlate").reportValidity();
                             let reportMessage = `<p class="error">` + result.invalidMsj + `</p>`
                             showResult('#plateValidationResult', reportMessage);
+                            showResult(`#addCarLoading`, ``);
 
                         } else {
                             // console.log("newItem: " + result.item);
